--- a/index.html
+++ b/index.html
@@ -4,25 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Er. Ashutosh Chandra | Engineering, Valuation & Business Intelligence Services</title>
+    <link rel="icon" type="image/png" href="/avilogo.png" />
     <meta name="description" content="Trusted engineering, valuation and TEV consulting services by Er. Ashutosh Chandra. Govt. approved valuer with 20+ years experience. Bank approved valuations across India." />
     <meta name="keywords" content="engineering valuation, govt approved valuer, TEV reports, business intelligence consulting, structural engineering, property valuation, chartered engineer" />
     <meta name="author" content="Er. Ashutosh Chandra" />
-
-    <!-- Open Graph Tags -->
-    <meta property="og:title" content="Er. Ashutosh Chandra - Engineering & Valuation Excellence" />
-    <meta property="og:description" content="20+ years of trusted engineering, valuation & business intelligence services. Govt. approved valuer serving major banks across India." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <meta property="og:url" content="https://lovable.dev/projects/4028c135-b8f1-4f9e-8c20-55673bca89d4" />
-
-    <!-- Twitter Card Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Er. Ashutosh Chandra - Engineering & Valuation Services" />
-    <meta name="twitter:description" content="Trusted consulting services: Avi Consultants, Tevquest, VAO Associates" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://lovable.dev/projects/4028c135-b8f1-4f9e-8c20-55673bca89d4" />
   </head>
 
   <body>
